Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3788

SNI callbacks stall after TS-3667 fix

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 5.3.2, 6.0.0
    • SSL
    • None

    Description

      Reported by oknet and the main discussion is in the TS-3667. Due to changes in the fix for TS-3667, the EAGAIN would get checked before calling SSL_accept. If SSL_accept state machine needed to write data, it would never get triggered and the handshake would stall.

      Attachments

        Issue Links

          Activity

            People

              shinrich Susan Hinrichs
              shinrich Susan Hinrichs
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: