TS-3788: SNI Callbacks stall after TS-3667 fix